--- a/TemperatureHeightTweak/TemperatureHeightTweak.csproj
+++ b/TemperatureHeightTweak/TemperatureHeightTweak.csproj
@@ -21,6 +21,12 @@
         <Reference Include="VSSurvivalMod">
             <HintPath>$(VINTAGE_STORY)/Mods/VSSurvivalMod.dll</HintPath>
         </Reference>
+        <Reference Include="VSEssentials">
+            <HintPath>$(VINTAGE_STORY)/Mods/VSEssentials.dll</HintPath>
+        </Reference>
+        <Reference Include="VSCreativeMod">
+            <HintPath>$(VINTAGE_STORY)/Mods/VSCreativeMod.dll</HintPath>
+        </Reference>
     </ItemGroup>
 
     <ItemGroup>
